@@ -1,50 +1,0 @@
-//
-// ********************************************************************
-// * DISCLAIMER                                                       *
-// *                                                                  *
-// * The following disclaimer summarizes all the specific disclaimers *
-// * of contributors to this software. The specific disclaimers,which *
-// * govern, are listed with their locations in:                      *
-// *   http://cern.ch/geant4/license                                  *
-// *                                                                  *
-// * Neither the authors of this software system, nor their employing *
-// * institutes,nor the agencies providing financial support for this *
-// * work  make  any representation or  warranty, express or implied, *
-// * regarding  this  software system or assume any liability for its *
-// * use.                                                             *
-// *                                                                  *
-// * This  code  implementation is the  intellectual property  of the *
-// * GEANT4 collaboration.                                            *
-// * By copying,  distributing  or modifying the Program (or any work *
-// * based  on  the Program)  you indicate  your  acceptance of  this *
-// * statement, and all its terms.                                    *
-// ********************************************************************
-//
-//
-// $Id: G4VPrintableScorerFactory.hh,v 1.1 2002-07-29 15:56:19 dressel Exp $
-// GEANT4 tag $Name: not supported by cvs2svn $
-//
-// ----------------------------------------------------------------------
-// Class G4VPrintableScorerFactory
-//
-// Class description:
-//
-// PrintableScores may be obtained by factories with this interface.
-// It is used by G4ParallelSamplerMessenger. It allows to use
-// the messenger for different printable scorers.
-// 
-// Author: Michael Dressel (Michael.Dressel@cern.ch)
-// ----------------------------------------------------------------------
-#ifndef G4VPrintableScorerFactory_hh
-#define G4VPrintableScorerFactory_hh G4VPrintableScorerFactory_hh
-
-#include "G4VPrintableScorer.hh"
-
-class G4VPrintableScorerFactory {
-public:
-  virtual ~G4VPrintableScorerFactory(){}
-  virtual G4VPrintableScorer *
-  CreatePrintableScorer(const G4String &particlename) const = 0;
-};
-
-#endif
