@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2002-08-13 10:03:29 dressel Exp $
+$Id: History,v 1.15 2002-08-13 14:18:25 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug,  13th, 2002 M.Dressel
+  removed G4VPrintableScorer.hh G4VPrintableScorerFactory.hh
 
 Aug,  13th, 2002 M.Dressel - geombias-V04-01-01
     added G4VCellScorer.hh and G4VCellScorerStore.hh
